Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTIEBRNET.VB

        Public Declare Function BTIEBR_MonConfig Lib "BTIEBR.DLL" Alias "_BTIEBR_MonConfig@12" (ByVal configval As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_MonFilterRTLink Lib "BTIEBR.DLL" Alias "_BTIEBR_MonFilterRTLink@12" (ByVal rtlinkmask As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_MonFilterSA Lib "BTIEBR.DLL" Alias "_BTIEBR_MonFilterSA@28" (ByVal rtlink As Int32, ByVal rcvsamask As UInt32, ByVal xmtsamask As UInt32, ByVal rcvmcmask As UInt32, ByVal xmtmcmask As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_MsgBlockRd Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgBlockRd@12" (ByRef buf As MSGFIELDSEBR, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_MsgBlockWr Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgBlockWr@12" (ByRef buf As MSGFIELDSEBR, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Sub BTIEBR_MsgDataRd Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgDataRd@16" (ByVal buf As UInt16(), ByVal count As Int32, ByVal msgaddr As UInt32, ByVal handleval As IntPtr)
        Public Declare Sub BTIEBR_MsgDataWr Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgDataWr@16" (ByVal buf As UInt16(), ByVal count As Int32, ByVal msgaddr As UInt32, ByVal handleval As IntPtr)
        Public Declare Function BTIEBR_MsgFieldRd Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgFieldRd@12" (ByVal fieldtype As UInt16, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_MsgFieldWr Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgFieldWr@16" (ByVal fieldval As UInt32, ByVal fieldtype As UInt16, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Sub BTIEBR_MsgGroupRd Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgGroupRd@16" (ByVal nummsgs As Int32, <[In](), Out(), MarshalAs(UnmanagedType.LPArray, SizeParamIndex:=0)> ByVal msgflds As MSGFIELDSEBR(), ByVal msgaddrptr As UInt32(), ByVal handleval As IntPtr)
        Public Declare Sub BTIEBR_MsgGroupWr Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgGroupWr@16" (ByVal nummsgs As Int32, <[In](), Out(), MarshalAs(UnmanagedType.LPArray, SizeParamIndex:=0)> ByVal msgflds As MSGFIELDSEBR(), ByVal msgaddrptr As UInt32(), ByVal handleval As IntPtr)
        Public Declare Function BTIEBR_MsgSkipRd Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgSkipRd@8" (ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTIEBR_MsgSkipWr Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgSkipWr@12" (ByVal skip As Int32, ByVal msgaddr As UInt32, ByVal handleval As IntPtr)
        Public Declare Function BTIEBR_MsgSyncDefine Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgSyncDefine@20" (ByVal enableflag As Int32, ByVal syncmask As UInt16, ByVal pinpolarity As UInt16, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_MsgTriggerDefine Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgTriggerDefine@24" (ByVal enableflag As Int32, ByVal trigmask As UInt16, ByVal trigval As UInt16, ByVal pinpolarity As UInt16, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_PlayConfig Lib "BTIEBR.DLL" Alias "_BTIEBR_PlayConfig@16" (ByVal configval As UInt32, ByVal rtlinkmask As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_PlayStatus Lib "BTIEBR.DLL" Alias "_BTIEBR_PlayStatus@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_PlayWr Lib "BTIEBR.DLL" Alias "_BTIEBR_PlayWr@16" (ByVal buf As UInt16(), ByVal bufcount As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Function BTIEBR_RTConfig Lib "BTIEBR.DLL" Alias "_BTIEBR_RTConfig@16" (ByVal configval As UInt32, ByVal rtlink As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_RTCreateList Lib "BTIEBR.DLL" Alias "_BTIEBR_RTCreateList@36" (ByVal listconfigval As UInt32, ByVal count As Int32, ByVal msgconfigval As UInt32, ByVal mcflag As Int32, ByVal rtlink As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_RTCreateMsg Lib "BTIEBR.DLL" Alias "_BTIEBR_RTCreateMsg@28" (ByVal configval As UInt32, ByVal mcflag As Int32, ByVal rtlink As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_RTGetMsg Lib "BTIEBR.DLL" Alias "_BTIEBR_RTGetMsg@24" (ByVal mcflag As Int32, ByVal rtlink As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_RTReset Lib "BTIEBR.DLL" Alias "_BTIEBR_RTReset@12" (ByVal rtlink As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_RTResponseTimeSet Lib "BTIEBR.DLL" Alias "_BTIEBR_RTResponseTimeSet@16" (ByVal resptime As Int32, ByVal rtlink As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_RTSetMode Lib "BTIEBR.DLL" Alias "_BTIEBR_RTSetMode@16" (ByVal configval As UInt32, ByVal rtlink As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_RTSWDRd Lib "BTIEBR.DLL" Alias "_BTIEBR_RTSWDRd@12" (ByVal rtlink As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Function BTIEBR_RTSWDWr Lib "BTIEBR.DLL" Alias "_BTIEBR_RTSWDWr@16" (ByVal swdval As UInt16, ByVal rtlink As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_RTSyncDefine Lib "BTIEBR.DLL" Alias "_BTIEBR_RTSyncDefine@40" (ByVal enableflag As Int32, ByVal syncmask As UInt16, ByVal pinpolarity As UInt16, ByVal rtlink As Int32, ByVal rcvsamask As UInt32, ByVal xmtsamask As UInt32, ByVal rcvmcmask As UInt32, ByVal xmtmcmask As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_ValPackCWD Lib "BTIEBR.DLL" Alias "_BTIEBR_ValPackCWD@16" (ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal wcval As Int32) As UInt16
        Public Declare Sub BTIEBR_ValUnpackCWD Lib "BTIEBR.DLL" Alias "_BTIEBR_ValUnpackCWD@20" (ByVal cwdval As UInt16, ByRef taval As Int32, ByRef trflag As Int32, ByRef saval As Int32, ByRef wcval As Int32)
        Public Declare Function BTIEBR_BCCreateListEx Lib "BTIEBR.DLL" Alias "_BTIEBR_BCCreateListEx@32" (ByVal listconfigval As UInt32, ByVal skipval As Int32, ByVal count As Int32, ByVal msgconfigval As UInt32, ByVal cwd As UInt16, ByVal data As UInt16(), ByVal rtlink As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_BCCreateListExx Lib "BTIEBR.DLL" Alias "_BTIEBR_BCCreateListExx@32" (ByVal listconfigval As UInt32, ByVal skipval As Int32, ByVal count As Int32, ByVal msgconfigval As UInt32, ByVal cwd As UInt16, ByVal data As UInt16(), ByVal rtlink As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_BCGetMsg Lib "BTIEBR.DLL" Alias "_BTIEBR_BCGetMsg@12" (ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_BCIMGapRd Lib "BTIEBR.DLL" Alias "_BTIEBR_BCIMGapRd@12" (ByRef gapval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCIMGapWr Lib "BTIEBR.DLL" Alias "_BTIEBR_BCIMGapWr@12" (ByVal gapval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCSchedBranchEx Lib "BTIEBR.DLL" Alias "_BTIEBR_BCSchedBranchEx@28" (ByVal condition1 As UInt16, ByVal condition2 As UInt16, ByVal condition3 As UInt16, ByVal opcode As UInt16, ByVal destindex As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCSchedCallEx Lib "BTIEBR.DLL" Alias "_BTIEBR_BCSchedCallEx@28" (ByVal condition1 As UInt16, ByVal condition2 As UInt16, ByVal condition3 As UInt16, ByVal opcode As UInt16, ByVal destindex As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCSchedLogEx Lib "BTIEBR.DLL" Alias "_BTIEBR_BCSchedLogEx@28" (ByVal condition1 As UInt16, ByVal condition2 As UInt16, ByVal condition3 As UInt16, ByVal opcode As UInt16, ByVal tagval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCSchedNop Lib "BTIEBR.DLL" Alias "_BTIEBR_BCSchedNop@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCSchedRetryEx Lib "BTIEBR.DLL" Alias "_BTIEBR_BCSchedRetryEx@28" (ByVal condition1 As UInt16, ByVal condition2 As UInt16, ByVal condition3 As UInt16, ByVal retryflag As UInt16, ByVal retries As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCSchedUser Lib "BTIEBR.DLL" Alias "_BTIEBR_BCSchedUser@12" (ByVal useraddr As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCSetEntry Lib "BTIEBR.DLL" Alias "_BTIEBR_BCSetEntry@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCTransmitMsgBlkEx Lib "BTIEBR.DLL" Alias "_BTIEBR_BCTransmitMsgBlkEx@20" (ByVal writeflag As Int32, ByVal count As Int32, <[In](), Out(), MarshalAs(UnmanagedType.LPArray, SizeParamIndex:=1)> ByVal xmitfieldsval As XMITFIELDSEBR(), ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCTransmitMsgBlkInit Lib "BTIEBR.DLL" Alias "_BTIEBR_BCTransmitMsgBlkInit@12" (ByVal maxcount As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCTransmitMsgBlkRd Lib "BTIEBR.DLL" Alias "_BTIEBR_BCTransmitMsgBlkRd@16" (ByVal count As Int32, <[In](), Out(), MarshalAs(UnmanagedType.LPArray, SizeParamIndex:=0)> ByVal xmitfieldsval As XMITFIELDSEBR(), ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCTransmitMsgBlkWr Lib "BTIEBR.DLL" Alias "_BTIEBR_BCTransmitMsgBlkWr@16" (ByVal count As Int32, <[In](), Out(), MarshalAs(UnmanagedType.LPArray, SizeParamIndex:=0)> ByVal xmitfieldsval As XMITFIELDSEBR(), ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BlkAddr Lib "BTIEBR.DLL" Alias "_BTIEBR_BlkAddr@12" (ByVal rtlink As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Function BTIEBR_BlkOptRd Lib "BTIEBR.DLL" Alias "_BTIEBR_BlkOptRd@12" (ByVal rtlink As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Function BTIEBR_BlkOptWr Lib "BTIEBR.DLL" Alias "_BTIEBR_BlkOptWr@16" (ByVal rtopt As UInt16, ByVal rtlink As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BlkPtrRd Lib "BTIEBR.DLL" Alias "_BTIEBR_BlkPtrRd@12" (ByVal rtlink As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Sub BTIEBR_BlkPtrWr Lib "BTIEBR.DLL" Alias "_BTIEBR_BlkPtrWr@16" (ByVal descaddr As UInt32, ByVal rtlink As Int32, ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTIEBR_BlkRd Lib "BTIEBR.DLL" Alias "_BTIEBR_BlkRd@16" (ByVal block As UInt16(), ByVal rtlink As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BlkReset Lib "BTIEBR.DLL" Alias "_BTIEBR_BlkReset@12" (ByVal rtlink As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
